# ros2_ws

./: .gitignore  CLAUDE.md  CMakeLists.txt  actually_working_demo.py  camera_viewer.py  cmd_vel_mux.py  debug_topics.sh  frames_2025-09-11_21.47.23.gv  lidar_navigation.rviz  lidar_only_dqn.py  lidar_only_navigator.py  lidar_opencv_nav.py  lidar_yolo_dqn.py  navigation.rviz  perfect_mapper_navigator.py  run_4wd_controller.sh  setup_4wd_rover.sh  setup_turtlebot4.sh  simple_line_navigator.py  simple_test_world.py  simple_world.sdf  simple_yolo_demo.py  smart_navigation.rviz  smart_path_planner.py  start_4wd_with_camera.sh  start_camera.sh  working_yolo_demo.py
perception_tutorials/: 01_lidar_basics.py  02_camera_basics.py  03_sensor_fusion.py  README.md
src/ai_robot_navigation/: README.md  package.xml  setup.py
src/ai_robot_navigation/ai_robot_navigation/: dqn_agent.py  navigation_controller.py  sensor_fusion.py  training_manager.py  yolo_detector.py
src/ai_robot_navigation/config/: requirements.txt
src/ai_robot_navigation/launch/: ai_robot_training.launch.py  simple_ai_demo.launch.py
src/camera_test/: laptop_camera_node.py  simple_camera_test.py
src/classic_4wd_robot/: CMakeLists.txt  package.xml
src/classic_4wd_robot/launch/: robot_gazebo.launch.py
src/classic_4wd_robot/urdf/: 4wd_robot.urdf
src/move_square_cpp/: CMakeLists.txt  package.xml
src/move_square_cpp/src/: move_square_node.cpp
src/simple-slam-test/: camera-test.cpp  deep_slam  down.py  hello.cpp
src/turtlebot3_dqn/: package.xml
src/turtlebot4_dqn/: package.xml  setup.py
src/turtlebot4_dqn/launch/: turtlebot4_dqn_training.launch.py
src/turtlebot4_dqn/turtlebot4_dqn/: dqn_environment.py  dqn_trainer.py
src/turtlebot_autonomous/: package.xml  setup.cfg  setup.py  test_skid_steer.py
src/turtlebot_autonomous/launch/: turtlebot4_autonomous.launch.py
src/turtlebot_autonomous/turtlebot_autonomous/: __init__.py
src/turtlebot_autonomous/turtlebot_autonomous/config/: __init__.py  parameters.py
src/turtlebot_autonomous/turtlebot_autonomous/core/: __init__.py  actions_space.py  navigation_controller.py  reward_calculator.py  state_machine.py
src/turtlebot_autonomous/turtlebot_autonomous/models/: __init__.py  dqn_model.py  vision_model.py  yolo_detector.py
src/turtlebot_autonomous/turtlebot_autonomous/nodes/: __init__.py  main_controller.py
src/turtlebot_autonomous/turtlebot_autonomous/utils/: __init__.py  image_processor.py  laser_processor.py
src/turtlebot_avoidance/: package.xml  setup.cfg  setup.py
src/turtlebot_avoidance/turtlebot_avoidance/: obstacle_avoidance.py  simple_camera_test.py  yolo_navigation.py
