<?xml version="1.0"?>
<package format="3">
  <name>ai_robot_navigation</name>
  <version>1.0.0</version>
  <description>Professional AI Robot Navigation with YOLO8 + DQN</description>
  <maintainer email="dev@robotics.com">AI Robotics Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>