<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_dqn</name>
  <version>1.0.0</version>
  <description>TurtleBot3 DQN navigation training</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>gazebo_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>